[gd_scene load_steps=8 format=2]

[ext_resource path="res://basic/assets/player/Escape.gd" type="Script" id=1]
[ext_resource path="res://Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main_menu/assets/ButtonTheme.tres" type="Theme" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.337255, 0.384314, 0.776471 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 2 )

[node name="Escape" type="Control"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Margin_Container" type="MarginContainer" parent="Panel"]
margin_left = 360.0
margin_top = 240.0
margin_right = 1560.0
margin_bottom = 840.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="HBoxContainer" parent="Panel/Margin_Container"]
margin_right = 1200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Margin_Container/Menu"]
margin_right = 1200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Margin_Container/Menu/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label_BounceBall" type="Label" parent="Panel/Margin_Container/Menu/VBoxContainer/HBoxContainer"]
margin_right = 1200.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Bounce Bullet"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/Margin_Container/Menu/VBoxContainer"]
margin_top = 302.0
margin_right = 1200.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Margin_Container/Menu/VBoxContainer/HBoxContainer2"]
margin_right = 1200.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15

[node name="Button_Retry" type="Button" parent="Panel/Margin_Container/Menu/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 1200.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Retry"

[node name="Button_Game" type="Button" parent="Panel/Margin_Container/Menu/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 78.0
margin_right = 1200.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back to Game"

[node name="Button_Main_Menu" type="Button" parent="Panel/Margin_Container/Menu/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 156.0
margin_right = 1200.0
margin_bottom = 219.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Back to Main menu"

[node name="Button_Quit" type="Button" parent="Panel/Margin_Container/Menu/VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 234.0
margin_right = 1200.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Quit"
